# ciphit

./: .gitignore  README.md  TODO.md  __init__.py  __main__.py  install.sh  pyproject.toml  requirements.txt  setup.py
ciphit/: __init__.py  __main__.py  ciphit.py
ciphit/basemods/: __init__.py
ciphit/basemods/Ciphers/: __init__.py  aes_cbc.py
ciphit/legacy/: ciphit.py
tools/: setup.sh
tools/commands/: install  uninstall
